labs/kca/lab5-cli/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  namespace: kyverno-test
spec:
  containers:
    - name: nginx
      image: nginx:alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: kyverno-test
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      resources:
        limits:
          cpu: "200m"
          memory: "128Mi"
